# contlist

./: .gitignore  Cargo.toml  README.md
migrations/2020-05-22-144324_create_users/: down.sql  up.sql
migrations/2020-05-22-195737_create_contacts/: down.sql  up.sql
src/: log.rs  main.rs  module.rs  schema.rs  utils.rs
src/application_logic/: error.rs  mod.rs
src/application_logic/contact_features/: create.rs  delete.rs  get.rs  list.rs  update.rs
src/application_logic/user_features/: get.rs  login.rs  mod.rs  register.rs  salt.rs  update.rs
src/db/: mod.rs  pool.rs
src/db/models/: contact.rs  mod.rs  user.rs
src/db/repo/: contact.rs  error.rs  mod.rs  user.rs
src/domain/: mod.rs  phone_number.rs  user.rs  utils.rs
src/domain/auth/: error.rs  mod.rs  token.rs
src/domain/contact/: contact.rs  error.rs  mod.rs
src/domain/security/: hasher.rs  mod.rs  token_handler.rs
src/domain/user/: auth.rs  error.rs  mod.rs  user.rs
src/domain_logic/repository/: contact_model.rs  contact_repo.rs  mod.rs  pool.rs  user_repo.rs
src/domain_logic/security/: hasher.rs  token_handler.rs
src/domain_model/: claims.rs  mod.rs  phone_number.rs
src/domain_model/entities/: contact.rs  user.rs
src/infrastructure/: mod.rs
src/infrastructure/repository/: connection.rs  mod.rs  pool.rs
src/infrastructure/security/: argon_hasher.rs  jwt_token_handler.rs  mod.rs
src/infrastructure/web/: current_user.rs  error.rs  mod.rs
src/web/: error.rs  mod.rs
src/web/auth/: error.rs  token.rs
src/web/contacts/: endpoints.rs  io.rs  mod.rs
src/web/users/: endpoints.rs  (+3 more)
(+11 files in other folders)
