[package]
name = "contlist"
version = "0.1.0"
authors = ["Aitzhanov Ivan <aitvann@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4"
# rocket_contrib = { version = "0.4", features = ["json", "databases", "diesel_postgres_pool"] }
rocket_cors = "0.5"
diesel = { version = "1.0", features = ["postgres", "r2d2", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
log = { version = "0.4" }
fern = { version = "0.5", features = ["colored"] }
shaku = "0.6"
dotenv = "0.15"
rand = "0.7"
base64 = "0.12"
rust-argon2 = "0.8"
jsonwebtoken = "7.1"
chrono = "0.4"
getset = "0.1"
boolinator = "2.4"
colored = "1.0"
